--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <section id="selection">
             <h2>Selecting the Right VFD</h2>
             <p>When selecting the right VFD for a specific application, considerations include motor power rating, voltage tolerance, and NEMA MG1 standards for motor design.</p>
-            <img src="vpn21.png" alt="VFD Selection">
+            <img src="pn22.png" alt="VFD Selection">
         </section>
         <section id="sizing">
             <h2>VFD Sizing</h2>
             <p>In VFD sizing, the main considerations are the VFD's continuous current, which should be higher than the motor's maximum load current, and the intermittent current, which should be 115% greater than the motor current rating for variable torque applications and 150-200% for constant torque applications.</p>
-            <img src="pn23.png" alt="VFD Sizing">
+            <img src="pn21.png" alt="VFD Sizing">
             <p>Looking for VFD design, quotation, installation, training, and consultation services? Look no further than Stanley Kr. Our expert team provides tailored solutions, from motor power rating analysis to system integration and maintenance. With our comprehensive training and support, you can maximize your VFD investment. Contact us today to learn more.</p>
         </section>
     </main>
