--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section id="selection">
             <h2>Selecting the Right VFD</h2>
             <p>When selecting the right VFD for a specific application, considerations include motor power rating, voltage tolerance, and NEMA MG1 standards for motor design.</p>
-            <img src="pn22.png" alt="VFD Selection">
+            <img src="pn23.png" alt="VFD Selection">
         </section>
         <section id="sizing">
             <h2>VFD Sizing</h2>
@@ -47,7 +47,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 VFD Solutions</p>
+        <p>© 2024 Stanley Kr</p>
     </footer>
 </body>
 </html>
